# quant_research_robot

./: .env.example  README.md  main.py  pyproject.toml
config/: config.py
docs/: usage.md
src/: llms.py
src/backtest/: backtest_engine.py  strategy_template.py
src/models/: llm_manager.py  research_processor.py
src/reports/: report_processor.py
src/utils/: factor_utils.py
